--- a/app/assets/stylesheets/pricing.css.scss
+++ b/app/assets/stylesheets/pricing.css.scss
@@ -2,16 +2,38 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+img { max-width: 100%; }
+
 .container {
-  width:  960px;
+  max-width:  960px;
+
+  img {
+  	display: none;
+  }
 
   .plan {
-    height: 500px;
-    float: left;
-    width: 300px;
+    float: none;
+    width: auto;
+    margin: 0 (30px / 960px * 100%);
   }
 
-  .plan.premium {
-    margin: 0 30px;
+  @media all and (min-width: 420px) {
+    .plan {
+      float: left;
+      width: 300px / 960px * 100%;
+      margin: 0;
+    }
+
+    img {
+      display: block;
+      margin: 0 auto;
+    }
+
+    .plan.premium {
+      margin: 0 (30px / 960px * 100%);
+    }
   }
+
+
+
 }
